--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Destyny War</title>
-</head>
-<body>
-Your visits this session: {{ visits }}
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+
+Your visits this session: {{ visits_session }}
+
+Total visits: {{ visits_total }}
+
+{% endblock %}
