--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Destyny War</title>
+  <title>Destyny War</title>
+  <link rel="shortcut icon" href="images/logo.jpg"/>
+  <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
 {% block content %}
 {% endblock %}
 </body>
+
 </html>
