--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Destyny War</title>
-  <link rel="shortcut icon" href="images/logo.jpg"/>
-  <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" href="static/images/logo.jpg"/>
+  <link href="static/css/main.css" rel="stylesheet">
 </head>
 
 <body>
