--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,6 +14,7 @@
 				<td>
 
 				  <form class="kasten" target="_top" method="post" name="login"><br>
+                      {{ form.hidden_tag() }}
                       <table border="0" cellpadding="0" cellspacing="0">
 					  <tbody>
 						<tr>
