--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,10 +20,16 @@
 						<tr>
 						  <td style="text-align:left;">&nbsp;&nbsp;&nbsp;Benutzername:&nbsp; </td>
 						  <td>{{ form.username(size=20) }}&nbsp;&nbsp;&nbsp;</td>
+                            {% for error in form.username.errors %}
+                            <td><span style="color: red;">[{{ error }}]</span></td>
+                            {% endfor %}
 						</tr>
 						<tr>
 						  <td style="text-align:left;">&nbsp;&nbsp;&nbsp;Passwort: </td>
 						  <td>{{ form.password(size=20) }}&nbsp;&nbsp;&nbsp;</td>
+                            {% for error in form.username.errors %}
+                            <td><span style="color: red;">[{{ error }}]</span></td>
+                            {% endfor %}
 						</tr>
 						<tr>
 						  <td></td>
@@ -40,7 +46,7 @@
 			</tr>
 			<tr>
 				<td colspan="2" style="text-align:center;">
-					<a href="#"><img style="border-style: none;" src="static/images/button.png" alt="Jetzt mitspielen."/></a>
+					<a href="{{ url_for("register") }}"><img style="border-style: none;" src="static/images/button.png" alt="Jetzt mitspielen."/></a>
 				</td>
 			</tr>
 		  </table>
