--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,8 +1,35 @@
 body {
     font-family: Arial;
-    background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     background: #2C2C2C url(/static/images/star_start.png) repeat;
+}
+
+.centered {
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+}
+
+.textcenter{
+    text-align: center;
+}
+
+.left{
+    text-align: left;
+    float: left;
+}
+
+.right{
+    text-align: right;
+    float: right;
+}
+
+.top{
+    vertical-align: top;
+}
+
+.error{
+    color: red;
 }
 
 .background_layer {
@@ -32,6 +59,8 @@ body {
 
 h1 {
     font-size: 20mm;
+    margin: 0;
+    height: 103px;
 }
 
 h2 {
@@ -72,4 +101,8 @@ a:active {
 
 .brett {
     border: 3px outset rgb(0, 0, 0);
+}
+
+#dw_desc {
+    width: 300px;
 }
