--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,5 +1,8 @@
 <tr class="tp">
 	<td>
 		<a href="#">Impressum</a>&nbsp;&nbsp;<a href="#">Forum</a>&nbsp;&nbsp;<a href="#">Hilfe</a>
+        {% if g.user.is_authenticated %}
+            <a class="right" href="{{ url_for("logout") }}">Logout</a>
+        {% endif %}
 	</td>
 </tr>
