--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,62 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
-
-<center>
-<table border="0" cellpadding="5" cellspacing="10" class="main">
-{% include "menu.html" %}
-<tr>
-      <td class="tp" style="text-align:center;"><h1>Registrierung</h1></td>
-    </tr>
-		<td class="tp">
-		  <form target="_top" method="post" name="register"><br>
-            {{ form.hidden_tag() }}
-			<table border="0" cellpadding="0" cellspacing="0">
-			  <tbody>
-				<tr>
-                  <td style="text-align:left;">&nbsp;&nbsp;&nbsp;Benutzername:&nbsp; </td>
-                  <td>{{ form.username(size=20) }}&nbsp;&nbsp;</td>
-                    {% for error in form.username.errors %}
-                    <td><span style="color: red;">[{{ error }}]</span></td>
-                    {% endfor %}
-                </tr>
-                <tr>
-                  <td style="text-align:left;">&nbsp;&nbsp;&nbsp;Email:&nbsp; </td>
-                  <td>{{ form.email(size=20) }}&nbsp;&nbsp;</td>
-                    {% for error in form.email.errors %}
-                    <td><span style="color: red;">[{{ error }}]</span></td>
-                    {% endfor %}
-                </tr>
-				<tr>
-                  <td style="text-align:left;">&nbsp;&nbsp;&nbsp;Passwort: </td>
-                  <td>{{ form.password(size=20) }}&nbsp;&nbsp;</td>
-                    {% for error in form.password.errors %}
-                    <td><span style="color: red;">[{{ error }}]</span></td>
-                    {% endfor %}
-                </tr>
-				<tr>
-                  <td style="text-align:left;">&nbsp;&nbsp;&nbsp;Passwortwiederholung:&nbsp;&nbsp;</td>
-                  <td>{{ form.password_rep(size=20) }}&nbsp;&nbsp;</td>
-                    {% for error in form.password_rep.errors %}
-                    <td><span style="color: red;">[{{ error }}]</span></td>
-                    {% endfor %}
-                </tr>
-				<tr>
-				  <td></td>
-				  <td><input value="Registrieren" type="submit"></td>
-				</tr>
-			  </tbody>
-			</table>
-		  </form>
-		</td>
-	</tr>
     <tr>
-      <td class="tp">
-		Du hast schon einen Benutzernamen? Melde dich einfach auf der <a href="{{ url_for("login") }}">Startseite</a> an.
-	  </td>
+        <td class="tp textcenter"><h1>Registrierung</h1></td>
     </tr>
-  </tbody>
-</table>
-</center>
-<br>
+    <tr>
+        <td class="tp">
+            <table border="0" cellpadding="5" cellspacing="5">
+                <tr>
+                    <td class="top">
+                        <form class="kasten" method="post" name="register"><br>
+                            {{ form.hidden_tag() }}
+                            <table border="0" cellpadding="0" cellspacing="0">
+                                <tbody>
+                                <tr>
+                                    <td class="{{ "left error" if form.username.errors else "left" }}">&nbsp;&nbsp;&nbsp;Benutzername:&nbsp; </td>
+                                    <td>{{ form.username(size=20) }}&nbsp;&nbsp;&nbsp;</td>
+                                </tr>
+                                <tr>
+                                    <td class="{{ "left error" if form.email.errors else "left" }}">
+                                        &nbsp;&nbsp;&nbsp;Email:&nbsp; </td>
+                                    <td>{{ form.email(size=20) }}</td>
+                                </tr>
+                                <tr>
+                                    <td class="{{ "left error" if form.password.errors else "left" }}">&nbsp;&nbsp;&nbsp;Passwort:
+                                    </td>
+                                    <td>{{ form.password(size=20) }}</td>
+                                </tr>
+                                <tr>
+                                    <td class="{{ "left error" if form.password_rep.errors else "left" }}">&nbsp;&nbsp;&nbsp;Wiederholung:&nbsp;&nbsp;</td>
+                                    <td>{{ form.password_rep(size=20) }}</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td><input value="Registrieren" type="submit"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <br>
+                        </form>
+                    </td>
+                    <td class="top">
+                        <p id="dw_desc" class="kasten"><br>Destyny War ist ein Browsergame, das in der Zukunft
+                            spielt. Jeder Spieler ist Besitzer eines Planeten, mit dessen Hilfe er das Universum
+                            beherschen kann. </p>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td class="tp">
+            Du hast schon einen Benutzernamen? Melde dich einfach auf der <a
+                href="{{ url_for("login") }}">Startseite</a>
+            an.
+        </td>
+    </tr>
 
 {% endblock %}
