Add environment file

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -32,7 +32,7 @@
                     <td class="top">
                         <p id="dw_desc" class="kasten top"><br>Destyny War ist ein Browsergame, das in der Zukunft
                             spielt. Jeder Spieler ist Besitzer eines Planeten, mit dessen Hilfe er das Universum
-                            beherschen kann. </p>
+                            beherschen kann.<br> </p>
                     </td>
                 </tr>
                 <tr>
