--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -42,7 +42,7 @@
                     <td class="top">
                         <p id="dw_desc" class="kasten"><br>Destyny War ist ein Browsergame, das in der Zukunft
                             spielt. Jeder Spieler ist Besitzer eines Planeten, mit dessen Hilfe er das Universum
-                            beherschen kann. </p>
+                            beherschen kann.<br> </p>
                     </td>
                 </tr>
             </table>
