--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -4,6 +4,46 @@ body {
     background: #2C2C2C url(/static/images/star_start.png) repeat;
 }
 
+a {
+    color: #00B700;
+}
+
+a:visited {
+    color: #00B700;
+}
+
+a:hover {
+    color: #00B700;
+}
+
+a:active {
+    color: #00B700;
+}
+
+.mailTable tr:not(:first-child):hover{
+    background-color: #222222;
+}
+
+.mailTable tr{
+    border: 2px solid grey;
+}
+
+.mailTable{
+    margin-left: auto;
+    margin-right: auto;
+    width: 750px;
+    border-collapse: collapse;
+}
+
+.mailTable tr:first-child{
+    border: none;
+}
+
+.mailTable tr:first-child > td{
+    padding-bottom: 20px;
+}
+
+
 .centered {
     margin-left: auto;
     margin-right: auto;
@@ -98,19 +138,7 @@ h9 {
     font-size: 3mm;
 }
 
-a:link {
-    color: #65B0FF;
-}
-
-a:visited {
-    color: #9B65FF;
-}
-
-a:active {
-    color: #4376AE;
-}
-
-.kasten {
+.tpkasten {
     border: 3px inset rgb(0, 0, 0);
 	border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -127,4 +155,15 @@ a:active {
 #dw_desc {
     width: 345px;
     margin-left: 5px;
+}
+
+.mailimage {
+    height: 6mm;
+    width: auto;
+    vertical-align: middle;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
