--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,8 +1,11 @@
 <tr class="tp">
 	<td>
-		<a href="#">Impressum</a>&nbsp;&nbsp;<a href="#">Forum</a>&nbsp;&nbsp;<a href="#">Hilfe</a>
+		<a href="{{ url_for("index") }}">Index</a>&nbsp;&nbsp;<a href="#">Impressum</a>&nbsp;&nbsp;<a href="#">Forum</a>&nbsp;&nbsp;<a href="#">Hilfe</a>
         {% if g.user.is_authenticated %}
-            <a class="right" href="{{ url_for("logout") }}">Logout</a>
+            <div class="right">
+                <a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp;&nbsp;
+                <a href="{{ url_for("logout") }}">Logout</a>
+            </div>
         {% endif %}
 	</td>
 </tr>
