--- a/app/templates/flash.html
+++ b/app/templates/flash.html
@@ -2,7 +2,7 @@
   {% if messages %}
     {% for message in messages %}
         <tr>
-            <td class="tp" style="text-align:center;">
+            <td class="border" style="text-align:center;">
                 {{ message }}
             </td>
         </tr>
