--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <tr>
-        <td class="tp textcenter"><h1>Index</h1></td>
+        <td class="border textcenter"><h1>Index</h1></td>
     </tr>
     <tr>
-        <td class="tp">
+        <td class="border">
             <p>Welcome back, {{ g.user.username }}!</p>
             <p>Your visits this session: {{ visits_session }}</p>
             <p>Total visits: {{ visits_total }}</p>
