--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <tr>
-        <td class="tp textcenter"><img src="static/images/cooltext2.png"/></td>
+        <td class="border textcenter"><img src="static/images/cooltext2.png"/></td>
     </tr>
     <tr>
-        <td class="tp">
+        <td class="border">
             <table border="0" cellpadding="5" cellspacing="5">
                 <tr>
                     <td class="top">
