--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,4 +1,4 @@
-<tr class="tp">
+<tr class="border">
 	<td>
 		<a href="{{ url_for("index") }}">Index</a>&nbsp;&nbsp;<a href="#">Impressum</a>&nbsp;&nbsp;<a href="#">Forum</a>&nbsp;&nbsp;<a href="#">Hilfe</a>
         {% if g.user.is_authenticated %}
