--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <tr>
-        <td class="tp textcenter"><h1>Registrierung</h1></td>
+        <td class="border textcenter"><h1>Registrierung</h1></td>
     </tr>
     <tr>
-        <td class="tp">
+        <td class="border">
             <table border="0" cellpadding="5" cellspacing="5">
                 <tr>
                     <td class="top">
@@ -49,7 +49,7 @@
         </td>
     </tr>
     <tr>
-        <td class="tp">
+        <td class="border">
             Du hast schon einen Benutzernamen? Melde dich einfach auf der <a
                 href="{{ url_for("login") }}">Startseite</a>
             an.
