--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Seite nicht gefunden!</h1>
-    <p>Diese Seite ist nicht vorhanden.</p>
-    <a href="{{ url_for("index") }}">Weg von hier!</a>
+<tr>
+	<td>
+		<div class="border textcenter">
+			<h1>Seite nicht gefunden!</h1>
+		</div>
+	</td>
+</tr>
+<tr>
+	<td>
+		<div class="border">
+			<table border="0" cellpadding="5" cellspacing="10" class="main centered_layer2">
+				<tr>
+					<td>
+						<p>Diese Seite ist nicht vorhanden.</p>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a href="{{ url_for("index") }}">Weg von hier!</a>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</td>
+</tr>
 {% endblock %}
