--- a/app/templates/holomail_sent.html
+++ b/app/templates/holomail_sent.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
     <tr>
-        <td class="tp textcenter"><h1>Holopost</h1></td>
+        <td class="border textcenter"><h1>Holopost</h1></td>
     </tr>
-    <tr>
+    <tr class="border">
     <td class="textcenter">
         <a href="{{ url_for("holopost_write") }}">Holopost schreiben</a>&nbsp;&nbsp;
         Postausgang&nbsp;&nbsp;
@@ -12,13 +12,13 @@
     </tr>
     {% if not mails.items %}
         <tr>
-            <td class="tp">
+            <td class="border">
                 Du hast noch keine Holopost gesendet.
             </td>
         </tr>
     {% else %}
         <tr>
-            <td class="tp">
+            <td class="border">
                 <table class="mailtable" border="0" cellpadding="5" cellspacing="5">
                     <tr>
                         <td>
