--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -29,9 +29,6 @@ a:active {
 }
 
 .mailTable{
-    margin-left: auto;
-    margin-right: auto;
-    width: 760px;
     border-collapse: collapse;
 }
 
@@ -83,7 +80,7 @@ a:active {
     top: 0;
     left: 0;
     z-index: -1;
-    width: 100%;
+    max-width: 100%;
     height: 652px;
     background: transparent url(/static/images/star_start.png) no-repeat top center;
 }
@@ -102,8 +99,15 @@ a:active {
 .col > td {
 }
 
+.hidden {
+	visibility: hidden;
+}
+
 * {
     font-size: 5mm;
+	-webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 h1 {
@@ -159,13 +163,13 @@ h9 {
 }
 
 #dw_desc {
-    width: 345px;
+    max-width: 345px;
     margin-left: 5px;
 }
 
 .mailimage {
     height: 6mm;
-    width: auto;
+    max-width: auto;
     vertical-align: middle;
 }
 
