-fixed holomail table alignment

--- a/app/templates/holomail.html
+++ b/app/templates/holomail.html
@@ -19,7 +19,7 @@
     {% else %}
         <tr>
             <td class="border">
-                <table class="mailtable" border="0" cellpadding="5" cellspacing="5">
+                <table class="mailtable centered_layer2" border="0" cellpadding="5" cellspacing="5">
                     <tr>
                         <td>
                             Sender
