--- a/app/templates/holomail_sent.html
+++ b/app/templates/holomail_sent.html
@@ -58,15 +58,15 @@
         <tr>
         <td class="textcenter">
             {% if mails.has_prev %}
-                <a href="{{ url_for("holopost_sent", page=mails.prev_num) }}" > <- neuer </a>
+                <a href="{{ url_for("holopost", page=mails.prev_num) }}" > <- neuer </a>
             {% else %}
-                <- neuer
+                <h7 class="hidden"><- neuer</h7>
             {% endif %}
             &nbsp;&nbsp;
             {% if mails.has_next %}
-                <a href="{{ url_for("holopost_sent", page=mails.next_num) }}" > älter -> </a>
+                <a href="{{ url_for("holopost", page=mails.next_num) }}" > älter -> </a>
             {% else %}
-                älter ->
+                <h7 class="hidden">älter -></h7>
             {% endif %}
         </td>
         </tr>
