Fix url for next/prev page
Next/Previous buttons now redirect to other pages of the outbox, not the inbox.

--- a/app/templates/holomail_sent.html
+++ b/app/templates/holomail_sent.html
@@ -58,13 +58,13 @@
         <tr>
         <td class="textcenter">
             {% if mails.has_prev %}
-                <a href="{{ url_for("holopost", page=mails.prev_num) }}" > <- neuer </a>
+                <a href="{{ url_for("holopost_sent", page=mails.prev_num) }}" > <- neuer </a>
             {% else %}
                 <h7 class="hidden"><- neuer</h7>
             {% endif %}
             &nbsp;&nbsp;
             {% if mails.has_next %}
-                <a href="{{ url_for("holopost", page=mails.next_num) }}" > älter -> </a>
+                <a href="{{ url_for("holopost_sent", page=mails.next_num) }}" > älter -> </a>
             {% else %}
                 <h7 class="hidden">älter -></h7>
             {% endif %}
