--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,13 +1,14 @@
-<nav>
-	<br><br>
-	<a href="{{ url_for("index") }}">Index</a><br>
-	<a href="#">Impressum</a><br>
-	<a href="#">Forum</a><br>
-	<a href="#">Hilfe</a><br>
-	{% if g.user.is_authenticated %}
-		<div>
-			<a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp;&nbsp;
-			<a href="{{ url_for("logout") }}">Logout</a>
-		</div>
-	{% endif %}
+<nav class="border">
+	<div class="div">
+		<a href="{{ url_for("index") }}">Index</a><br>
+		<a href="#">Impressum</a><br>
+		<a href="#">Forum</a><br>
+		<a href="#">Hilfe</a><br>
+		{% if g.user.is_authenticated %}
+			<div>
+				<a href="{{ url_for("logout") }}">Logout</a><br><br><br>
+				<a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp<a href="{{ url_for("holopost") }}">Holomail</a>
+			</div>
+		{% endif %}
+	</div>
 </nav>
