--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -14,10 +14,13 @@ body {
 @media screen and (min-width:1000px){
 	nav{
 		float: left;
-		width: 200px;
+		width: 180px;
+		margin-right: 20px;
+		margin-top: 70px;
 	}
 	section{
 		margin-left: 200px;
+		margin-top: 1em;
 	}
 	.screenwidth{
 		width: 1000px;
@@ -43,11 +46,15 @@ body {
 .half-left{
 	float: left;
 	width: 50%;
+	margin-top: 1em;
+	margin-left: 1em;
 }
 
 .half-right{
 	margin-left: 52%;
 	width: 48%;
+	margin-top: 1em;
+	margin-right: 1em;
 }
 
 .third-left{
@@ -64,8 +71,29 @@ body {
 	text-align:right;
 }
 
+.text-center{
+	text-align:center;
+}
+
 .entry{
 	max-width:100%;
+}
+
+.div{
+	margin-left:1em;
+	margin-top:1em;
+	margin-right:1em;
+	margin-bottom:1em;
+}
+
+.border {
+    border-style: solid;
+    border-width: 3px;
+    border-color: #00B700;
+    background-color: #111111;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
 }
 
 a {
@@ -147,17 +175,6 @@ a:active {
     max-width: 100%;
     height: 652px;
     background: transparent url(/static/images/star_start.png) no-repeat top center;
-}
-
-.border {
-    opacity: 0.700;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #00B700;
-    background-color: #111;
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
 }
 
 .col > td {
