--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,12 +1,22 @@
-<nav class="border">
+<nav class="nav-border">
 	<div class="div">
-		<a href="{{ url_for("index") }}">Index</a><br>
-		<a href="#">Impressum</a><br>
-		<a href="#">Forum</a><br>
-		<a href="#">Hilfe</a><br>
+		<div class="inline">
+			<a href="{{ url_for("index") }}">Index</a>
+		</div>
+		<div class="inline">
+			<a href="#">Impressum</a><br>
+		</div>
+		<div class="inline">
+			<a href="#">Forum</a><br>
+		</div>
+		<div class="inline">
+			<a href="#">Hilfe</a><br>
+		</div>
 		{% if g.user.is_authenticated %}
-			<div>
-				<a href="{{ url_for("logout") }}">Logout</a><br><br><br>
+			<div class="inline">
+				<a href="{{ url_for("logout") }}">Logout</a>
+			</div>
+			<div class="inline">
 				<a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp<a href="{{ url_for("holopost") }}">Holomail</a>
 			</div>
 		{% endif %}
