--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-	<section class="text-center">
+	<section class="header">
 		<h1>Registrierung</h1>
 	</section>
 	<section class="border">
