--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
     <section class="header">
         <td class="border textcenter"><h1>Index</h1></td>
     </section>
+	{% include "flash.html" %}
     <section class="border">
         <div class="div">
             <p>Welcome back, {{ g.user.username }}!</p>
