--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,7 @@
 	<section class="text-center">
 		<img src="static/images/cooltext2.png"/>
 	</section>
+	{% include "flash.html" %}
 	<section class="border">
 		<form class="half-left" method="post" name="login">
             {{ form.hidden_tag() }}
