--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,6 +3,7 @@
 	<section class="header">
 		<h1>Registrierung</h1>
 	</section>
+	{% include "flash.html" %}
 	<section class="border">
         <form method="post" name="register">
 			{{ form.hidden_tag() }}
