--- a/app/templates/flash.html
+++ b/app/templates/flash.html
@@ -1,11 +1,11 @@
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     {% for message in messages %}
-        <tr>
-            <td class="border" style="text-align:center;">
-                {{ message }}
-            </td>
-        </tr>
+        <section class="border">
+			<div class="div">
+				{{ message }}
+			</div>
+		</section>
     {% endfor %}
   {% endif %}
 {% endwith %}
