--- a/app/templates/holomail_sent.html
+++ b/app/templates/holomail_sent.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+	{% include "flash.html" %}
     <tr>
         <td class="border textcenter"><h1>Holopost</h1></td>
     </tr>
