--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -85,11 +85,53 @@ body {
 .third-left{
 	float: left;
 	width: 33%;
+	margin-left: 1em;
+	margin-right: 1em;
 }
 
 .third-right{
 	margin-left: 35%;
 	width: 65%;
+	margin-right: 1em;
+}
+
+.quarter-left{
+	float: left;
+	width: 25%;
+	margin-left: 1em;
+	margin-right: 1em;
+}
+
+.quarter-right{
+	margin-left: 25%;
+	width: 75%;
+	margin-right: 1em;
+}
+
+.fith-left{
+	float: left;
+	width: 20%;
+	margin-left: 1em;
+	margin-right: 1em;
+}
+
+.fith-right{
+	margin-left: 20%;
+	width: 80%;
+	margin-right: 1em;
+}
+
+.tenth-left{
+	float: left;
+	width: 10%;
+	margin-left: 1em;
+	margin-right: 1em;
+}
+
+.tenth-right{
+	margin-left: 10%;
+	width: 90%;
+	margin-right: 1em;
 }
 
 .text-right{
@@ -126,6 +168,10 @@ body {
 	-webkit-border-radius: 10px;
 }
 
+.link-active{
+	color: #00E000;
+}
+
 a {
     color: #00B700;
 }
@@ -139,7 +185,7 @@ a:hover {
 }
 
 a:active {
-    color: #00E000;
+    color: #00FF00;
 }
 
 .mailTable tr:not(:first-child):hover{
@@ -152,6 +198,7 @@ a:active {
 
 .mailTable{
     border-collapse: collapse;
+	width:100%;
 }
 
 .mailTable tr:first-child{
@@ -162,52 +209,8 @@ a:active {
     padding-bottom: 20px;
 }
 
-
-.centered {
-    margin-left: auto;
-    margin-right: auto;
-    width: 800px;
-}
-
-.centered_layer2 {
-    margin-left: auto;
-    margin-right: auto;
-    width: 760px;
-}
-
-.textcenter{
-    text-align: center;
-}
-
-.left{
-    text-align: left;
-    float: left;
-}
-
-.right{
-    text-align: right;
-    float: right;
-}
-
-.top{
-    vertical-align: top;
-}
-
 .error{
     color: red;
-}
-
-.background_layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    max-width: 100%;
-    height: 652px;
-    background: transparent url(/static/images/star_start.png) no-repeat top center;
-}
-
-.col > td {
 }
 
 .hidden {
@@ -250,25 +253,6 @@ h8 {
 
 h9 {
     font-size: 3mm;
-}
-
-.tpkasten {
-    border: 3px inset rgb(0, 0, 0);
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-}
-
-.brett {
-    border: 3px outset rgb(0, 0, 0);
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-}
-
-#dw_desc {
-    max-width: 345px;
-    margin-left: 5px;
 }
 
 .mailimage {
