--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -17,7 +17,7 @@
 				<a href="{{ url_for("logout") }}">Logout</a>
 			</div>
 			<div class="inline">
-				<a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp<a href="{{ url_for("holopost") }}">Holomail</a>
+				<a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp<a href="{{ url_for("holopost") }}">Holopost</a>
 			</div>
 		{% endif %}
 	</div>
