--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,14 +1,73 @@
+* {
+    font-size: 5mm;
+	-webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
     font-family: Arial;
     color: rgb(255, 255, 255);
     background: #2C2C2C url(/static/images/star_start.png) repeat;
 }
 
-* {
+a {
+    color: #00B700;
+}
+
+a:visited {
+    color: #00B700;
+}
+
+a:hover {
+    color: #00E000;
+}
+
+a:active {
+    color: #00FF00;
+}
+
+h1 {
+    font-size: 18mm;
+    margin: auto;
+    height: 103px;
+}
+
+h2 {
+    font-size: 10mm;
+}
+
+h3 {
+    font-size: 9mm;
+}
+
+h4 {
+    font-size: 8mm;
+}
+
+h5 {
+    font-size: 7mm;
+}
+
+h6 {
+    font-size: 6mm;
+}
+
+h7 {
     font-size: 5mm;
-	-webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+}
+
+h8 {
+    font-size: 4mm;
+}
+
+h9 {
+    font-size: 3mm;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 @media screen and (min-width:1000px){
@@ -134,6 +193,18 @@ body {
 	margin-right: 1em;
 }
 
+.after-float-left{
+	clear:left;
+}
+
+.after-float-right{
+	clear:right;
+}
+
+.after-float-both{
+	clear:both;
+}
+
 .text-right{
 	text-align:right;
 }
@@ -172,22 +243,6 @@ body {
 	color: #00E000;
 }
 
-a {
-    color: #00B700;
-}
-
-a:visited {
-    color: #00B700;
-}
-
-a:hover {
-    color: #00E000;
-}
-
-a:active {
-    color: #00FF00;
-}
-
 .mailTable tr:not(:first-child):hover{
     background-color: #005000;
 }
@@ -217,51 +272,8 @@ a:active {
 	visibility: hidden;
 }
 
-h1 {
-    font-size: 18mm;
-    margin: auto;
-    height: 103px;
-}
-
-h2 {
-    font-size: 10mm;
-}
-
-h3 {
-    font-size: 9mm;
-}
-
-h4 {
-    font-size: 8mm;
-}
-
-h5 {
-    font-size: 7mm;
-}
-
-h6 {
-    font-size: 6mm;
-}
-
-h7 {
-    font-size: 5mm;
-}
-
-h8 {
-    font-size: 4mm;
-}
-
-h9 {
-    font-size: 3mm;
-}
-
 .mailimage {
     height: 5.5mm;
     max-width: auto;
     vertical-align: middle;
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
 }
