--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -75,8 +75,9 @@ img {
 		float: left;
 		width: 180px;
 		margin-right: 20px;
-		margin-top: 70px;
-		height:50%
+		margin-top: 8%;
+		margin-bottom: 12%;
+		height:80%
 	}
 	
 	section{
