--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,9 @@
 		{% endif %}
 		<link rel="shortcut icon" href="{{ url_for("static", filename="images/logo.jpg") }}"/>
 		<link href="{{ url_for("static", filename="css/main.css") }}" rel="stylesheet">
+		<link href="{{ url_for("static", filename="css/fonts.css") }}" rel="stylesheet">
+		<link href="{{ url_for("static", filename="css/responsive.css") }}" rel="stylesheet">
+		<link href="{{ url_for("static", filename="css/splitlayout.css") }}" rel="stylesheet">
 	</head>
 
 	<body class="screenwidth">
