--- a/app/templates/holomail_sent.html
+++ b/app/templates/holomail_sent.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+	<link href="{{ url_for("static", filename="css/holomail.css") }}" rel="stylesheet">
 	<section class="header">
 		<h1>Holopost</h1>
 	</section>
