Add markdown support

--- a/app/templates/holomail_detail.html
+++ b/app/templates/holomail_detail.html
@@ -35,7 +35,7 @@
                 </tr>
                 <tr>
                     <td>
-                        {{ mail.body }}
+                        {{ mail.body|markdown }}
                     </td>
                 </tr>
                 <tr>
