--- a/app/templates/holomail_send.html
+++ b/app/templates/holomail_send.html
@@ -12,11 +12,12 @@
     </tr>
     <tr>
         <td class="border">
-            <table border="0" cellpadding="5" cellspacing="5">
+            <table border="0" cellpadding="5" cellspacing="5" class="wide">
                 <tr>
                     <td class="top">
                         <form class="kasten" method="post" name="holomail"><br>
                             {{ form.hidden_tag() }}
+                            {{ pagedown.include_pagedown() }}
                             <table border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                 <tr>
@@ -31,11 +32,28 @@
                                 <tr>
                                     <td class="{{ "left error" if form.body.errors else "left" }}">&nbsp;&nbsp;&nbsp;Nachricht:
                                     </td>
-                                    <td>{{ form.body(cols=40, rows=10) }}</td>
+                                    <td class="wide">
+                                        {{ form.body(rows=10, only_input=True, class="smalltext wide") }}
+                                    </td>
                                 </tr>
                                 <tr>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        <div id="preview" class="smalltext" style="display:none;">
+                                            {{ form.body(only_preview=True) }}
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <script>
+                                        function showhide(id) {
+                                        var e = document.getElementById(id);
+                                        e.style.display = (e.style.display == 'block') ? 'none' : 'block';
+                                     }
+                                     </script>
                                     <td></td>
-                                    <td><input value="Senden" type="submit"></td>
+                                    <td>{{ form.submit }}<input type="button" value="Vorschau" onclick="showhide('preview')"></td>
                                 </tr>
                                 </tbody>
                             </table>
