Add highlighting for new mails
New mails are now highlightet in the inbox, and the mail-symbol in the upper right will now show an opened letter if all mail is read.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -37,6 +37,10 @@ a:active {
     background-color: #005000;
 }
 
+.highlight {
+    background-color: #222222;
+}
+
 .mailTable tr{
     border: 2px solid grey;
 }
