--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -3,7 +3,11 @@
 		<a href="{{ url_for("index") }}">Index</a>&nbsp;&nbsp;<a href="#">Impressum</a>&nbsp;&nbsp;<a href="#">Forum</a>&nbsp;&nbsp;<a href="#">Hilfe</a>
         {% if g.user.is_authenticated %}
             <div class="right">
-                <a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>&nbsp;&nbsp;
+                {% if g.user.has_read_all_mails() %}
+                    <a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailGelesen.png") }}"></a>
+                {% else %}
+                    <a href="{{ url_for("holopost") }}"><img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}"></a>
+                {% endif %}&nbsp;&nbsp;
                 <a href="{{ url_for("logout") }}">Logout</a>
             </div>
         {% endif %}
